--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -11,6 +11,7 @@
 <link rel="import" href="portfolio-page-project.html">
 <link rel="import" href="portfolio-project.html">
 <link rel="import" href="portfolio-icons.html">
+<link rel="import" href="portfolio-yt-player.html">
 
 <!-- site pages -->
 <link rel="import" href="portfolio-page-home.html">
