--- a/app/elements/portfolio-page-project.html
+++ b/app/elements/portfolio-page-project.html
@@ -214,6 +214,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         properties: {
           link: String,
           title: String
+        },
+
+        ready: function() {
+          this.scrollToTop();
+        },
+
+        scrollToTop: function() {
+          this.fire('scroll-top');
         }
 
       });
