--- a/app/elements/portfolio-page-home.html
+++ b/app/elements/portfolio-page-home.html
@@ -8,8 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-<!-- <link rel="import" href="../../bower_components/google-youtube/google-youtube.html"> -->
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<!-- <link rel="import" href="../bower_components/google-youtube/google-youtube.html"> -->
 <link rel="import" href="portfolio-footer.html">
 <link rel="import" href="portfolio-project.html">
 
