adds projects with content.json using iron ajax

--- a/app/elements/portfolio-page-about.html
+++ b/app/elements/portfolio-page-about.html
@@ -98,7 +98,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <section>
 
         <div id="image">
-          <iron-image preload fade src="../../images/about-img.jpg"></iron-image>
+          <iron-image preload fade src="../images/about-img.jpg"></iron-image>
         </div>
 
         <div id="content">
@@ -107,9 +107,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <p>When i'm not working, I spend most my free time with the family but I also have been known to shoot some basketball and play a mean Imperial DPS on Elder Scrolls Online for the PS4.</p>
 
           <ul>
-            <li><iron-image preload fade src="../../images/badge-certified.png"></iron-image></li>
-            <li><iron-image preload fade src="../../images/badge-YTMasthead.png"></iron-image></li>
-            <li><iron-image preload fade src="../../images/badge-HTML5.png"></iron-image></li>
+            <li><iron-image preload fade src="../images/badge-certified.png"></iron-image></li>
+            <li><iron-image preload fade src="../images/badge-YTMasthead.png"></iron-image></li>
+            <li><iron-image preload fade src="../images/badge-HTML5.png"></iron-image></li>
           </ul>
 
         </div>
