--- a/app/elements/shared-styles.html
+++ b/app/elements/shared-styles.html
@@ -19,6 +19,14 @@
 			  	};
 			}
 
+			a {
+				-webkit-transition: color 0.3s ease-in-out;
+				   -moz-transition: color 0.3s ease-in-out;
+				    -ms-transition: color 0.3s ease-in-out;
+				     -o-transition: color 0.3s ease-in-out;
+				        transition: color 0.3s ease-in-out;
+			}
+
 			section,
 			aside {
 				padding: 25px;
