--- a/app/elements/portfolio-page-project.html
+++ b/app/elements/portfolio-page-project.html
@@ -53,6 +53,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       #sidebar-header a {
         color: #000;
+        text-decoration: none;
         -webkit-transition: color 0.3s ease-in-out;
            -moz-transition: color 0.3s ease-in-out;
             -ms-transition: color 0.3s ease-in-out;
