--- a/app/elements/portfolio-icons.html
+++ b/app/elements/portfolio-icons.html
@@ -32,63 +32,6 @@ Custom property | Description | Default
 -->
 
 <dom-module id="portfolio-icons">
-  <iron-iconset-svg name="academy" size="100">
-
-    <svg version="1.1" id="grow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 61.9 61.9" style="enable-background:new 0 0 61.9 61.9;" xml:space="preserve">
-      <path class="st0" d="M31,0C13.9,0,0,13.9,0,31s13.9,31,31,31s31-13.9,31-31C61.9,13.9,48.1,0,31,0z M47,31l-2.9-3.9L32.4,37.8
-        L25.6,31L15.3,41.2l-2.4-2.4l12.6-12.6l6.8,6.8l8.3-8.3l-3.9-3.9H47V31z"/>
-    </svg>
-
-    <svg version="1.1" id="community" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 61.9 61.9" style="enable-background:new 0 0 61.9 61.9;" xml:space="preserve">
-      <path class="st0" d="M31,0C13.9,0,0,13.9,0,31s13.9,31,31,31s31-13.9,31-31S48.1,0,31,0z M41.1,22c2.1,0,3.9,1.7,3.9,3.9
-        c0,2.1-1.7,3.9-3.9,3.9c-2.1,0-3.8-1.7-3.8-3.9S39,22,41.1,22z M31.5,24.5c1.8,0,3.2,1.4,3.2,3.2c0,1.8-1.4,3.2-3.2,3.2
-        s-3.2-1.4-3.2-3.2C28.3,26,29.7,24.5,31.5,24.5z M21.8,22c2.1,0,3.8,1.7,3.8,3.9c0,2.1-1.7,3.9-3.8,3.9s-3.9-1.7-3.9-3.9
-        C18,23.7,19.7,22,21.8,22z M21.8,37.1V40h-9v-3.2c0-3,6-4.5,9-4.5c0.8,0,1.9,0.1,3,0.4C22.3,34.1,21.8,36,21.8,37.1z M38.6,40H24.4
-        v-2.9c0-2.4,4.7-3.5,7.1-3.5s7.1,1.2,7.1,3.5V40z M50.1,40h-9v-2.9c0-1.1-0.4-3-3-4.5c1.1-0.2,2.2-0.4,3-0.4c3,0,9,1.5,9,4.5V40z"/>
-    </svg>
-
-
-    <svg version="1.1" id="camera" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 61.9 61.9" style="enable-background:new 0 0 61.9 61.9;" xml:space="preserve">
-      <path class="st0" d="M31,0C13.9,0,0,13.9,0,31s13.9,31,31,31s31-13.9,31-31C61.9,13.9,48.1,0,31,0z M44.7,38.5L39,33v4.8
-        c0,0.8-0.6,1.4-1.4,1.4h-17c-0.8,0-1.4-0.6-1.4-1.4V24.1c0-0.8,0.6-1.4,1.4-1.4h17c0.8,0,1.4,0.6,1.4,1.4v4.8l5.7-5.5V38.5z"/>
-    </svg>
-
-    <svg version="1.1" id="play" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-    viewBox="0 0 61.9 61.9" style="enable-background:new 0 0 61.9 61.9;" xml:space="preserve">
-      <path class="st0" d="M31,0C13.9,0,0,13.9,0,31s13.9,31,31,31s31-13.9,31-31C61.9,13.9,48.1,0,31,0z M25.1,41.1V20.8L42.7,31
-        L25.1,41.1z"/>
-    </svg>
-
-    <svg version="1.1" id="watch" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 79.9 79.9" style="enable-background:new 0 0 79.9 79.9;" xml:space="preserve">
-      <g>
-        <path class="st0" d="M26.5,49.9H55V30.8H26.5V49.9z M36,34l11.1,6.4L36,46.7V34z"/>
-        <path class="st0" d="M40,0C17.9,0,0,17.9,0,40s17.9,40,40,40s40-17.9,40-40C79.9,17.9,62,0,40,0z M58.2,49.9c0,1.7-1.4,3.2-3.2,3.2
-          h-7.9v3.2H34.4v-3.2h-7.9c-1.8,0-3.2-1.4-3.2-3.2V30.8c0-1.8,1.4-3.2,3.2-3.2H55c1.7,0,3.2,1.4,3.2,3.2V49.9z"/>
-      </g>
-    </svg>
-
-    <svg version="1.1" id="money" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-      viewBox="0 0 61.9 61.9" style="enable-background:new 0 0 61.9 61.9;" xml:space="preserve">
-        <path class="st0" d="M31,0C13.9,0,0,13.9,0,31s13.9,31,31,31s31-13.9,31-31C61.9,13.9,48.1,0,31,0z M23,25.6L23,25.6l0.9,0.7
-          l0.5,0.4l0.5,0.4l0.6,0.5l0.3,0.2l0.5,0.4l0.5,0.4l0.9,0.7l0.5,0.4l0.5,0.4l2.7,2l0.9,0.7l-7.7,3.9l-3.6-3L20.1,33l-0.9-0.7
-          l-0.5-0.4l-0.5-0.4l-0.9-0.7l-0.5-0.4L16.3,30l-0.9-0.7L23,25.6z M32.6,39.5l-8,4l-9.2-7l0.8-0.4l7.7,5.9c0.2,0.1,0.4,0.2,0.6,0.2
-          s0.3,0,0.5-0.1l7.6-3.8V39.5z M32.6,37.1l-8,4l-7.3-5.6l-0.5-0.4l-0.5-0.4L15.4,34l0.8-0.4l0.9,0.7l0.5,0.4l0.5,0.4l5.8,4.4
-          c0.2,0.1,0.4,0.2,0.6,0.2s0.3,0,0.5-0.1l7.6-3.8V37.1z M32.6,34.7l-8,4l-5.4-4.1l-0.5-0.4L18.2,34l-0.9-0.7l-0.5-0.4l-0.5-0.4
-          l-0.9-0.7l0.8-0.4l0.9,0.7l0.5,0.4l0.5,0.4l0.9,0.7l0.5,0.4l0.5,0.4l4,3c0.2,0.1,0.4,0.2,0.6,0.2s0.3,0,0.5-0.1l7.6-3.8v1H32.6z
-           M39.4,36.9l-5.8,2.9v-7.5L33.3,32l-0.6-0.4l-3-2.2L29.3,29l-0.5-0.4l-1-0.7l-0.5-0.4l-0.5-0.4l-0.9-0.7l-0.5-0.3L25.3,26L25,25.8
-          l-1-0.7l-0.4-0.3l2.9-1.4l0.6-0.3l2.3-1.1l0.4,0.3l0.9,0.7l0.5,0.4l0.5,0.4l0.9,0.7l0.5,0.4l0.5,0.4l1,0.7l0.5,0.4l0.5,0.4l3.6,2.7
-          l0.3,0.2h0.1v7.2H39.4z M40.5,35.5v-1.2l5.1-2.6l0.9,0.7L40.5,35.5z M45.7,30.5l-0.5,0.3l-0.5,0.3l-4.2,2.1V32l3.3-1.6l0.5-0.3
-          l0.5-0.3l0.8-0.4l0.9,0.7L45.7,30.5z M45.7,28.2l-0.5,0.3l-0.5,0.3l-0.8,0.4l-0.5,0.3l-0.5,0.3L40.6,31v-1.2l1.4-0.7l0.5-0.3
-          l0.5-0.3l0.8-0.4l0.5-0.3l0.5-0.3l0.8-0.4l0.9,0.7L45.7,28.2z M45.7,25.8l-0.5,0.3l-0.5,0.3l-0.8,0.4L43.3,27l-0.5,0.3L42,27.7
-          L41.5,28L41,28.3l-0.7,0.4c-0.1-0.1-0.1-0.1-0.2-0.2c-0.1-0.1-0.2-0.1-0.3-0.1L36.6,26l-0.5-0.3l-0.5-0.4l-0.9-0.7l-0.5-0.4
-          l-0.5-0.4l-1-0.7l-0.5-0.4l-0.5-0.4l-1-0.7l6.5-3.2l9.2,7L45.7,25.8z"/>
-    </svg>
-
-  </iron-iconset-svg>
 
   <iron-iconset-svg name="link" size="100">
 
@@ -117,84 +60,6 @@ Custom property | Description | Default
      viewBox="0 0 14.3 14.3" style="enable-background:new 0 0 14.3 14.3;" xml:space="preserve">
       <path class="st0" d="M14,0.4L0.4,13.9"/>
       <path class="st0" d="M13.9,14L0.4,0.4"/>
-    </svg>
-
-    <svg version="1.1" id="arrow-left" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 14.3 14.3" style="enable-background:new 0 0 14.3 14.3;" xml:space="preserve">
-      <g>
-        <path class="icon-arrow-left-fill" d="M10.9,2.6L9.4,1.2l-6,6l6,6l1.4-1.4L6.3,7.2L10.9,2.6z"/>
-      </g>
-    </svg>
-
-
-    <svg version="1.1" id="arrow-right" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-       y="0px" viewBox="0 0 14.3 14.3" style="enable-background:new 0 0 14.3 14.3;" xml:space="preserve">
-      <g>
-        <path class="icon-arrow-right-fill" d="M4.9,1.2L3.4,2.6L8,7.2l-4.6,4.6l1.4,1.4l6-6L4.9,1.2z"/>
-      </g>
-    </svg>
-
-    <svg version="1.1" id="icon-carousel-middle" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 16.2 12.9" style="enable-background:new 0 0 16.2 12.9;" xml:space="preserve">
-      <g>
-        <g>
-          <path class="icon-carousel-middle-fill" d="M2.4,5.9l1.3,1.4L8.1,3l4.4,4.4L13.8,6L8.1,0.3L2.4,5.9z"/>
-        </g>
-        <path class="icon-carousel-middle-fill" d="M0.4,10.7h3.9v1.9H0.4V10.7z"/>
-        <path class="icon-carousel-middle-fill" d="M6.2,10.7h3.9v1.9H6.2V10.7z"/>
-        <path class="icon-carousel-middle-fill" d="M12,10.7h3.9v1.9H12V10.7z"/>
-      </g>
-    </svg>
-
-    <svg version="1.1" id="icon-down-caret" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 24.0 14.0" style="enable-background:new 0 0 24.0 14.0;" xml:space="preserve">
-      <g>
-        <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z">
-      </g>
-    </svg>
-
-    <svg version="1.1" id="refresh" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 367.136 367.136" style="enable-background:new 0 0 367.136 367.136;" xml:space="preserve">
-      <path d="M336.554,86.871c-11.975-18.584-27.145-34.707-44.706-47.731L330.801,0H217.436v113.91L270.4,60.691
-        c40.142,28.131,65.042,74.724,65.042,124.571c0,83.744-68.13,151.874-151.874,151.874S31.694,269.005,31.694,185.262
-        c0-58.641,32.781-111.009,85.551-136.669l-13.119-26.979C73.885,36.318,48.315,59.1,30.182,87.494
-        c-18.637,29.184-28.488,62.991-28.488,97.768c0,100.286,81.588,181.874,181.874,181.874s181.874-81.588,181.874-181.874
-        C365.442,150.223,355.453,116.201,336.554,86.871z"/>
-    </svg>
-
-    <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 532.9 532.9" style="enable-background:new 0 0 532.9 532.9;" xml:space="preserve">
-      <g id="YouTube_logo_dark_color">
-        <path id="lozenge_2_" class="st0" d="M525.6,205.5c0,0-3-21.4-12.4-30.9c-11.9-12.4-25.2-12.4-31.3-13.2
-          c-43.7-3.1-109.3-3.1-109.3-3.1h-0.1c0,0-65.5,0-109.2,3.1c-6.1,0.7-19.4,0.8-31.3,13.2c-9.4,9.4-12.4,30.9-12.4,30.9
-          s-3.1,25.2-3.1,50.3v23.6c0,25.2,3.1,50.3,3.1,50.3s3,21.4,12.4,30.9c11.9,12.4,27.5,12,34.4,13.3c25,2.4,106.2,3.1,106.2,3.1
-          s65.6-0.1,109.3-3.2c6.1-0.7,19.4-0.8,31.3-13.2c9.4-9.4,12.4-30.9,12.4-30.9s3.1-25.2,3.1-50.3v-23.6
-          C528.8,230.6,525.6,205.5,525.6,205.5z"/>
-        <path id="u_3_" d="M200.4,335.3h-19.9v-11.5c-7.5,8.6-13.9,13-20.9,13c-6.1,0-10.3-2.9-12.5-8.1c-1.3-3.2-2.2-8.1-2.2-15.4v-83.7
-          h19.9v78.5c0,4.4,0,6.3,0,7.3c0.5,2.9,1.7,4,4.2,4c3.8,0,7.2-3.3,11.5-9.2v-80.5h19.9V335.3z"/>
-        <path id="o_2_" d="M130.3,264.1c0-11.3-2.3-19.8-6.3-25.1c-5.3-7.2-13.6-10.2-22-10.2c-9.5,0-16.7,3-22,10.2
-          c-4.1,5.3-6.3,13.9-6.3,25.2v37.6c0,11.2,1.9,19,6,24.3c5.3,7.2,13.9,11,22.2,11c8.4,0,17.1-3.8,22.4-11c4-5.3,5.9-13,5.9-24.3
-          L130.3,264.1L130.3,264.1z M110.4,303.9c1,10.5-2.2,15.6-8.4,15.6s-9.4-5.2-8.4-15.6v-41.8c-1-10.5,2.2-15.4,8.4-15.4
-          s9.4,4.9,8.4,15.4V303.9z"/>
-        <path id="y_2_" d="M51.9,277.7v57.5H31v-57.5c0,0-21.7-70.5-26.1-83.7h22l14.7,55.1l14.4-55h22L51.9,277.7z"/>
-        <path id="e_2_" class="st1" d="M502.6,286.1v-21.4c0-11.2-2.2-19.3-6.2-24.6c-5.3-7.1-12.8-10.9-22.3-10.9
-          c-9.7,0-17.2,3.8-22.7,10.9c-4,5.3-6.4,13.9-6.4,25.1v36.6c0,11.1,2.6,18.9,6.6,24.1c5.5,7.1,13,10.7,22.9,10.7s17.7-3.7,22.9-11.3
-          c2.3-3.3,3.8-7.1,4.4-11.3c0.2-1.9,0.7-6.2,0.7-12.3v-3h-19.9c0,7.6,0,12.1-0.1,13.1c-1.1,5.1-3.8,7.6-8.5,7.6
-          c-6.5,0-9.2-4.9-9.2-14.5v-18.8H502.6z M464.9,258.9c0-9.8,2.7-12.4,9-12.4s8.8,2.9,8.8,12.6v11.4h-17.8V258.9z"/>
-        <path id="b_2_" class="st1" d="M414.9,229c-7,0-13.9,4.3-20,11.8v-45.7H376v140.1h18.8v-10.5c6.3,7.8,13.2,11.9,20,11.9
-          c7.5,0,13-4,15.6-11.8c1.3-4.4,2.1-11.3,2.1-20.9v-41.8c0-9.9-1.3-16.7-2.5-20.9C427.5,233.4,422.4,229,414.9,229z M412.7,304.9
-          c0,10.5-2.5,14.5-7.9,14.5c-3.1,0-6.7-1.6-9.9-4.8v-63.4c3.2-3.1,6.7-4.8,9.9-4.8c5.5,0,7.9,3.1,7.9,13.5V304.9z"/>
-        <path id="u_2_" class="st1" d="M360.4,335.3h-19.9v-11.5c-7.5,8.6-13.9,13-20.9,13c-6.1,0-10.3-2.9-12.5-8.1
-          c-1.3-3.2-2.2-8.1-2.2-15.4v-82.6h19.9v77.4c0,4.4,0,6.3,0,7.3c0.5,2.9,1.7,4,4.2,4c3.8,0,7.2-3.3,11.5-9.2v-79.5h19.9V335.3z"/>
-        <polygon id="T_2_" class="st1" points="285.1,335.3 264.2,335.3 264.2,215 242.2,215 242.2,195.1 308.1,195.1 308.1,215 285.1,215
-            "/>
-      </g>
-    </svg>
-
-    <svg version="1.1" id="subscribers" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 48 48" style="enable-background:new 0 0 48 48;" xml:space="preserve">
-      <path class="st0" d="M40,16H8v-4h32V16z M36,4H12v4h24V4z M44,24v16c0,2.2-1.8,4-4,4H8c-2.2,0-4-1.8-4-4V24c0-2.2,1.8-4,4-4h32
-        C42.2,20,44,21.8,44,24z M32,32l-12-6.5v13.1L32,32z"/>
     </svg>
 
   </iron-iconset-svg>
@@ -290,59 +155,6 @@ Custom property | Description | Default
       </g>
     </svg>
 
-    <svg version="1.1" id="chat" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 100 80" style="enable-background:new 0 0 100 80;" xml:space="preserve">
-      <path class="icon-chat-fill" d="M92,0H8C3.6,0,0,3.6,0,8v72l16-16h76c4.4,0,8-3.6,8-8V8C100,3.6,96.4,0,92,0z M29.7,38.7
-        c-3.1,0-5.7-2.6-5.7-5.7s2.6-5.7,5.7-5.7s5.7,2.6,5.7,5.7S32.8,38.7,29.7,38.7z M50,38.7c-3.1,0-5.7-2.6-5.7-5.7s2.6-5.7,5.7-5.7
-        s5.7,2.6,5.7,5.7S53.1,38.7,50,38.7z M70.3,38.7c-3.1,0-5.7-2.6-5.7-5.7s2.6-5.7,5.7-5.7S76,29.9,76,33S73.4,38.7,70.3,38.7z"/>
-    </svg>
-
-    <svg version="1.1" id="mail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 40 27" style="enable-background:new 0 0 40 27;" xml:space="preserve">
-      <g>
-        <path class="icon-mail-fill" d="M20,15.9c1.5-0.7,12.9-9.1,20-15.1c0,0-0.5-0.8-1-0.8H1C0.5,0,0,0.8,0,0.8C7.1,6.8,18.5,15.2,20,15.9z"/>
-        <path class="icon-mail-fill" d="M20,18.9c-1.1,0-12.6-8.6-20-14.8V26c0,0.5,0.5,1,1,1h38c0.5,0,1-0.5,1-1V4.1C32.6,10.3,21.1,18.9,20,18.9z"/>
-      </g>
-    </svg>
-
-    <svg version="1.1" id="speaker" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 48 48" style="enable-background:new 0 0 48 48;" xml:space="preserve">
-
-      <path class="icon-speaker-fill" d="M6,18v12h8l10,10V8L14,18H6z M33,24c0-3.5-2-6.6-5-8.1V32C31,30.6,33,27.5,33,24z M28,6.5v4.1
-        c5.8,1.7,10,7.1,10,13.4s-4.2,11.7-10,13.4v4.1c8-1.8,14-9,14-17.5S36,8.3,28,6.5z"/>
-    </svg>
-
-    <svg version="1.1" id="branding" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 61.9 61.9" style="enable-background:new 0 0 61.9 61.9;" xml:space="preserve">
-      <g>
-        <path class="icon-branding-fill" d="M22.3,22.2c-1.2,0-2.1,0.9-2.2,2.1c0,0,0,0,0,0c0,0,0,0,0,0.1c0,0,0,0,0,0c0,0.4,0.1,0.7,0.3,1
-          c0,0,0,0.1,0,0.1c0,0,0,0,0,0c0.1,0.2,0.2,0.3,0.4,0.4c0,0,0.1,0,0.1,0.1c0,0,0,0,0,0c0.1,0,0.1,0.1,0.2,0.1c0,0,0,0,0,0
-          c0,0,0.1,0.1,0.1,0.1c0,0,0.1,0,0.1,0c0,0,0,0,0,0c0.3,0.1,0.6,0.2,0.9,0.2c1.2,0,2.2-1,2.2-2.2C24.5,23.2,23.5,22.2,22.3,22.2z"/>
-        <path class="icon-branding-fill" d="M31,0C13.9,0,0,13.9,0,31c0,17.1,13.9,31,31,31c17.1,0,31-13.9,31-31C61.9,13.9,48.1,0,31,0z M44,35.6
-          c-0.8,0.8-1.7,1.7-2.5,2.5c-2.8,2.8-5.7,5.6-8.5,8.4c-0.6,0.6-1.1,0.6-1.7,0c-4.4-4.4-8.8-8.9-13.1-13.3c-0.5-0.5-0.7-1.1-0.7-1.8
-          c0-1,0-9.4,0-10.5c0-0.9,0.3-1.2,1.2-1.2c0,0,8.1,0,10.2,0c0.9,0,1.6,0.3,2.2,1c3.5,3.6,7,7.2,10.4,10.7c0.8,0.8,1.6,1.7,2.4,2.5
-          C44.6,34.5,44.6,34.9,44,35.6z"/>
-      </g>
-    </svg>
-
-    <svg version="1.1" id="stats" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 61.9 61.9" style="enable-background:new 0 0 61.9 61.9;" xml:space="preserve">
-
-      <path class="icon-stats-fill" d="M31,0C13.9,0,0,13.9,0,31c0,17.1,13.9,31,31,31c17.1,0,31-13.9,31-31C61.9,13.9,48.1,0,31,0z M23.6,43.2h-4.9
-        V26.1h4.9V43.2z M33.4,43.2h-4.9V18.7h4.9V43.2z M43.2,43.2h-4.9v-9.8h4.9V43.2z"/>
-    </svg>
-
-    <svg version="1.1" id="keepwatch" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 79.9 79.9" style="enable-background:new 0 0 79.9 79.9;" xml:space="preserve">
-
-      <g>
-        <path class="icon-keepwatch-fill" d="M26.5,49.9H55V30.8H26.5V49.9z M36,34l11.1,6.4L36,46.7V34z"/>
-        <path class="icon-keepwatch-fill" d="M40,0C17.9,0,0,17.9,0,40c0,22.1,17.9,40,40,40s40-17.9,40-40C79.9,17.9,62,0,40,0z M58.2,49.9
-          c0,1.7-1.4,3.2-3.2,3.2h-7.9v3.2H34.4v-3.2h-7.9c-1.8,0-3.2-1.4-3.2-3.2V30.8c0-1.8,1.4-3.2,3.2-3.2H55c1.7,0,3.2,1.4,3.2,3.2
-          L58.2,49.9z"/>
-      </g>
-    </svg>
-
   </iron-iconset-svg>
 
   <template>
@@ -359,11 +171,8 @@ Custom property | Description | Default
     'use strict';
 
     Polymer({
-      is: 'portfolio-icons',
+      is: 'portfolio-icons'
 
-      properties: {
-
-      }
     });
   })();
   </script>
