alt header in effect

--- a/app/elements/portfolio-main.html
+++ b/app/elements/portfolio-main.html
@@ -96,7 +96,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       #main-nav .title #logo {
         display: inline-block;
         margin-right: 5px;
-        width: 200px;
+        margin-top: 3px;
+        width: 150px;
         /*height: 20px;*/
         height: 100%;
       }
@@ -193,7 +194,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
         #main-nav .title #logo {
-          margin-top: 3px;
+          margin-top: 0px;
+          width: 300px;
         }
 
         #main-nav .title span {
@@ -468,7 +470,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this.$.drawer.closeDrawer();
       }
 
-      this.$.scroll.scrollToTop();
+      this.handleScrollTop();
 
     },
     /**
