--- a/app/elements/portfolio-page-contact.html
+++ b/app/elements/portfolio-page-contact.html
@@ -23,8 +23,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         @apply(--layout-flex);
         -webkit-align-items: center;
                 align-items: center;
-        -webkit-justify-content: flex-end;
-                justify-content: flex-end;
+        -webkit-justify-content: flex-start;
+                justify-content: flex-start;
         position: relative;
         overflow: hidden;
         width: 100%;
@@ -36,17 +36,38 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         text-align: center;
         color: #FFFFFF;
         position: relative;
-        z-index: 2;
+        z-index: 0;
+        @apply(--layout-flex);
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-align-items: center;
+                align-items: center;
+        -webkit-justify-content: center;
+                justify-content: center;
+        width: 500px;
+        height: 500px;
+        margin-left: 25px;
+        background: url('../images/contact-bg.png')no-repeat center center;
+        -webkit-background-size: cover;
+             -o-background-size: cover;
+                background-size: cover;
       }
 
       h1 {
         font-size: 48px;
         line-height: 52px;
+        margin: 40px 0 10px 0;
       }
 
       h3 {
         font-size: 36px;
         line-height: 42px;
+        margin: 0;
+      }
+
+      h4 {
+        margin: 20px 0 0 0;
       }
 
       .bg-image {
@@ -61,19 +82,50 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       @media screen and (max-width: 767px) {
         main {
-          height: 76vh;
+          height: 75vh;
           -webkit-align-items: center;
                   align-items: center;
+          -webkit-justify-content: center;
+                  justify-content: center;
+        }
+
+        section {
+          margin-left: 0;
         }
 
         h1 {
           font-size: 38px;
           line-height: 44px;
+          margin: 20px 0 10px 0;
         }
 
         h3 {
           font-size: 32px;
           line-height: 38px;
+        }
+
+      }
+
+      @media screen and (max-width: 600px) {
+
+        section {
+          width: 300px;
+          height: 300px;
+        }
+
+        h1 {
+          font-size: 28px;
+          line-height: 32px;
+        }
+
+        h3 {
+          font-size: 22px;
+          line-height: 36px;
+        }
+
+        h4 {
+          font-size: 12px;
+          line-height: 16px;
         }
 
       }
