adds banner ads project page css noodles

--- a/app/elements/portfolio-footer.html
+++ b/app/elements/portfolio-footer.html
@@ -80,10 +80,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           height: 35px;
           
           -webkit-transition: all 0.3s ease-in-out;
-            -moz-transition: all 0.3s ease-in-out;
-             -ms-transition: all 0.3s ease-in-out;
-              -o-transition: all 0.3s ease-in-out;
-                 transition: all 0.3s ease-in-out;       
+             -moz-transition: all 0.3s ease-in-out;
+              -ms-transition: all 0.3s ease-in-out;
+               -o-transition: all 0.3s ease-in-out;
+                  transition: all 0.3s ease-in-out;       
         }
 
         .icon:hover {
@@ -100,25 +100,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <ul class="footer-content">
 
           <li>
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a href="https://www.linkedin.com/in/herb-torres-7b5aa1a1" target="_blank">
               <iron-icon icon="social:linkedin" class="icon icon-youtube"></iron-icon>
             </a>
           </li>
 
           <li>
-            <a href="https://www.facebook.com/" target="_blank">
+            <a href="https://www.facebook.com/herb.torres.73" target="_blank">
               <iron-icon icon="social:facebook" class="icon icon-youtube"></iron-icon>
             </a>
           </li>
 
           <li>
-            <a href="https://www.facebook.com" target="_blank">
+            <a href="https://twitter.com/herb_x" target="_blank">
               <iron-icon icon="social:twitter" class="icon icon-twitter"></iron-icon>
             </a>
           </li>
 
           <li>
-            <a href="https://www.instagram.com/" target="_blank">
+            <a href="https://www.instagram.com/herb_torres/" target="_blank">
               <iron-icon icon="social:instagram" class="icon icon-youtube"></iron-icon>
             </a>
           </li>
