--- a/app/elements/portfolio-main.html
+++ b/app/elements/portfolio-main.html
@@ -416,6 +416,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <portfolio-page-project-slots route="{{pageTail}}" on-scroll-top="handleScrollTop"></portfolio-page-project-slots>
           </neon-animatable>
 
+          <neon-animatable key="banners">
+            <portfolio-page-project-banners route="{{pageTail}}" on-scroll-top="handleScrollTop"></portfolio-page-project-banners>
+          </neon-animatable>
+
         </neon-animated-pages>
 
       </paper-scroll-header-panel>
