--- a/app/elements/portfolio-page-contact.html
+++ b/app/elements/portfolio-page-contact.html
@@ -64,10 +64,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 36px;
         line-height: 42px;
         margin: 0;
+        letter-spacing: 1px;
       }
 
       h4 {
         margin: 20px 0 0 0;
+        letter-spacing: 1px;
       }
 
       .bg-image {
