--- a/app/elements/portfolio-project.html
+++ b/app/elements/portfolio-project.html
@@ -68,10 +68,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       span {
-        font: 400 18px/32px 'Open Sans', sans-serif;
+        font: 700 18px/32px 'Open Sans', sans-serif;
         color: black;
         opacity: 0;
         width: 100%;
+        letter-spacing: 1px;
         -webkit-transition: opacity 0.3s ease-in-out;
            -moz-transition: opacity 0.3s ease-in-out;
             -ms-transition: opacity 0.3s ease-in-out;
