--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -28,3 +28,4 @@
 <link rel="import" href="projects/portfolio-page-project-kraft.html">
 <link rel="import" href="projects/portfolio-page-project-stitches.html">
 <link rel="import" href="projects/portfolio-page-project-slots.html">
+<link rel="import" href="projects/portfolio-page-project-banners.html">
