--- a/app/elements/shared-styles.html
+++ b/app/elements/shared-styles.html
@@ -40,6 +40,16 @@
 				max-width: var(--site-max-width);
 				margin: 0 auto;
 			}
+
+			iron-image {
+				--iron-image-placeholder: {
+				  background-repeat: no-repeat;
+				  background-position: center center;
+				  -webkit-background-size: cover;
+				       -o-background-size: cover;
+				          background-size: cover;
+				}
+			}
  
     </style>
   </template>
