--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -20,6 +20,7 @@
 
 <!-- project pages -->
 <link rel="import" href="projects/portfolio-page-project-rewind.html">
+<link rel="import" href="projects/portfolio-page-project-rewind-16.html">
 <link rel="import" href="projects/portfolio-page-project-nextup.html">
 <link rel="import" href="projects/portfolio-page-project-artifact.html">
 <link rel="import" href="projects/portfolio-page-project-creator.html">
@@ -29,3 +30,4 @@
 <link rel="import" href="projects/portfolio-page-project-stitches.html">
 <link rel="import" href="projects/portfolio-page-project-slots.html">
 <link rel="import" href="projects/portfolio-page-project-banners.html">
+<link rel="import" href="projects/portfolio-page-project-ats.html">
