--- a/app/elements/projects/portfolio-page-project-banners.html
+++ b/app/elements/projects/portfolio-page-project-banners.html
@@ -89,7 +89,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <section content>
 
-        <!-- <iframe class="demo" src="http://dev.herbtorres.com/banner-example/"></iframe> -->
+        <iframe class="demo" src="http://dev.herbtorres.com/banner-example/"></iframe>
 
       </section>
 
