--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,10 @@
     <!-- build:js js/webcomponents.min.js -->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <!-- endbuild -->
+    <script src="http://www.gstatic.com/external_hosted/gsap/v1_16_1/TweenMax.min.js"></script>
+    <script src="http://www.gstatic.com/external_hosted/gsap/v1_16_1/TimelineLite.min.js"></script>
+    <script src="http://www.gstatic.com/external_hosted/gsap/v1_16_1/plugins/CSSPlugin.min.js"></script>
+    <script src="http://www.gstatic.com/external_hosted/gsap/v1_16_1/easing/EasePack.min.js"></script>
     <script src="js/vendor.js"></script>
     <script src="js/app.js"></script>
 
