adds codepen page

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -31,3 +31,4 @@
 <link rel="import" href="projects/portfolio-page-project-slots.html">
 <link rel="import" href="projects/portfolio-page-project-banners.html">
 <link rel="import" href="projects/portfolio-page-project-ats.html">
+<link rel="import" href="projects/portfolio-page-project-codepens.html">
