--- a/app/elements/portfolio-main.html
+++ b/app/elements/portfolio-main.html
@@ -428,6 +428,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <portfolio-page-project-rewind-16 route="{{pageTail}}" on-scroll-top="handleScrollTop"></portfolio-page-project-rewind-16>
           </neon-animatable>
 
+          <neon-animatable key="codepens">
+            <portfolio-page-project-codepens route="{{pageTail}}" on-scroll-top="handleScrollTop"></portfolio-page-project-codepens>
+          </neon-animatable>
+
         </neon-animated-pages>
 
       </paper-scroll-header-panel>
