--- a/app/elements/portfolio-page-about.html
+++ b/app/elements/portfolio-page-about.html
@@ -27,7 +27,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 flex-direction: column;
         -webkit-justify-content: center;
                 justify-content: center;
-        min-height: 79vh;
+        /*min-height: 79vh;*/
+        min-height: calc(100vh - 196px);
       }
 
       iron-image ::content img {
@@ -133,6 +134,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         .mobile {
           display: block;
+        }
+      }
+
+      @media screen and (max-width: 600px) {
+        main {
+          min-height: calc(100vh - 156px);
         }
       }
 
