--- a/app/elements/portfolio-page-home.html
+++ b/app/elements/portfolio-page-home.html
@@ -22,7 +22,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       main {
-        min-height: 85vh;
+        /*min-height: 85vh;*/
+        min-height: calc(100vh - 196px);
       }
 
       .l-project-grid {
@@ -81,19 +82,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       @media screen and (max-width: 767px) {
         .l-project-grid portfolio-project {
-          -webkit-flex: 0 0 47%;
-              -ms-flex: 0 0 47%;
-                  flex: 0 0 47%;
-        }
-      }
-
-      @media screen and (max-width: 480px) {
-        .l-project-grid portfolio-project {
           -webkit-flex: 0 0 97%;
               -ms-flex: 0 0 97%;
                   flex: 0 0 97%;
         }
       }
+
+      @media screen and (max-width: 600px) {
+        main {
+          min-height: calc(100vh - 156px;)
+        }
+      }
+
+      /*@media screen and (max-width: 480px) {
+        .l-project-grid portfolio-project {
+          -webkit-flex: 0 0 97%;
+              -ms-flex: 0 0 97%;
+                  flex: 0 0 97%;
+        }
+      }*/
 
       #loader {
         position: absolute;
