--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -32,3 +32,4 @@
 <link rel="import" href="projects/portfolio-page-project-banners.html">
 <link rel="import" href="projects/portfolio-page-project-ats.html">
 <link rel="import" href="projects/portfolio-page-project-codepens.html">
+<link rel="import" href="projects/portfolio-page-project-kaiya.html">
