--- a/app/elements/portfolio-main.html
+++ b/app/elements/portfolio-main.html
@@ -432,6 +432,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <portfolio-page-project-codepens route="{{pageTail}}" on-scroll-top="handleScrollTop"></portfolio-page-project-codepens>
           </neon-animatable>
 
+          <neon-animatable key="kaiya">
+            <portfolio-page-project-kaiya route="{{pageTail}}" on-scroll-top="handleScrollTop"></portfolio-page-project-kaiya>
+          </neon-animatable>
+
         </neon-animated-pages>
 
       </paper-scroll-header-panel>
